# TLDRScraper

./: .ARCHITECTURE.md  .env.sh  .gitattributes  .gitignore  .gitmodules  .ignore  .lastwork  .replit  .sessions  .tmp_prompt.md  .vercelignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE_HEURISTIC.md  App.tsx  BUGS.md  CACHE_MODE_ARCHITECTURE.md  CACHE_MODE_IMPLEMENTATION.md  CACHE_OPTIMIZATION.md  CACHE_SYSTEM.md  CLAUDE.md  CLIENTSIDE_TESTING.md  CLIENT_SIDE_STRUCTURE.md  CODEX.md  CONTEXT.txt  DESIGN_DESCRIPTIONS.md  DESIGN_V1_UNTANGLING_REPORT.md  GEMINI.md  GOTCHAS.md  HEADLESS_BROWSERS.md  IMG_0195.heic  IMG_0196.heic  IMPROVING_TRAINING_DATA.md  Justfile  MANUAL_BROWSER_TESTING.md  MODULARIZATION_PLAN.md  PHASE2_VERIFICATION.md  PLANNER_PROMPT_TEMPLATE.md  PLAYWRIGHT_TESTING_SUMMARY.md  PROJECT_STRUCTURE.md  (+135 more)
.claude/: settings.json  settings.local.json
.githooks/: README.md  post-checkout  post-checkout.disabled  post-merge  post-rewrite  pre-commit  pre-merge-commit  pre-push  pre-rebase  sync-external-subdir.sh  sync-subdir.sh  sync-upstream-suggestions.md  util.sh
.pi/: APPEND_SYSTEM.md  SYSTEM.md  settings.json
26-01-22-speed-up-app-refresh/: plan.md  research.md
adapters/: aiwithmike_adapter.py  anthropic_adapter.py  anthropic_news_adapter.py  bytebytego_adapter.py  claude_blog_adapter.py  cloudflare_adapter.py  danluu_adapter.py  deepmind_adapter.py  google_research_adapter.py  grandimam_adapter.py  hackernews_adapter.py  hillel_wayne_adapter.py  infoq_adapter.py  jessitron_adapter.py  lenny_newsletter_adapter.py  lucumr_adapter.py  martin_fowler_adapter.py  netflix_adapter.py  (+13 more)
(+963 files in other folders)
