[project]
name = "tldr-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "curl-cffi>=0.13.0",
    "flask>=3.1.2",
    "haxor>=1.2.4",
    "markitdown>=0.1.3",
    "requests>=2.32.5",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "playwright>=1.55.0",
]
