[project]
name = "tldr-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "curl-cffi>=0.13.0",
    "feedparser>=6.0.0",
    "firecrawl-py>=1.11.0",
    "flask>=3.1.2",
    "html2text>=2025.4.15",
    "requests>=2.32.5",
    "supabase>=2.0.0",
    "anthropic>=0.72.0",
    "openai>=2.0.0",
    "google-genai>=1.36.0",
    "podcast-creator>=0.2.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
podcast-creator = { git = "https://github.com/giladbarnea/podcast_creator.git", rev = "main" }
